--- a/Capsule_Network_Project.ipynb
+++ b/Capsule_Network_Project.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "test3.ipynb",
+      "name": "Capsule_Network_Project.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -26,6 +26,7 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torchvision.transforms as T\n",
+        "import torch.nn.functional as F\n",
         "from torchvision.datasets import ImageFolder\n",
         "from torch.utils.data import DataLoader"
       ],
@@ -37,18 +38,18 @@
       "metadata": {
         "id": "U7AN-xvK8RVc",
         "colab_type": "code",
+        "outputId": "e065523d-906d-46ae-a0de-3e04e4ae4d20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "4fdaf4bb-9853-4976-acb8-d814e3657886"
+        }
       },
       "source": [
         "print(f\"CUDA is available? {torch.cuda.is_available()}\")\n",
         "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(dev)"
       ],
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,17 +66,17 @@
       "metadata": {
         "id": "HddFaBBPs0k6",
         "colab_type": "code",
+        "outputId": "66e53499-db0c-4609-db6a-1f6515544ea4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        },
-        "outputId": "2c1b079b-cba5-4893-cd9a-f9fb5985e15c"
+        }
       },
       "source": [
         "drive.mount(\"/content/drive\",True)\n",
         "root_dir = \"/content/drive/My Drive/SB3/\""
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,8 +117,8 @@
       "source": [
         "train_dataset = ImageFolder(os.path.join(root_dir, \"train\"), transform=train_transform)\n",
         "test_dataset = ImageFolder(os.path.join(root_dir, \"test\"), transform=train_transform)\n",
-        "train_loader = DataLoader(train_dataset, batch_size = 8, num_workers=4, shuffle=True)\n",
-        "test_loader   = DataLoader(test_dataset,   batch_size = 8, num_workers=4, shuffle=False)\n",
+        "train_loader = DataLoader(train_dataset, batch_size = 4, num_workers=4, shuffle=True)\n",
+        "test_loader   = DataLoader(test_dataset,   batch_size = 4, num_workers=4, shuffle=False)\n",
         "loaders = {\n",
         "    \"train\": train_loader,\n",
         "    \"test\": test_loader\n",
@@ -131,17 +132,17 @@
       "metadata": {
         "id": "ZdhX4e8dtL-g",
         "colab_type": "code",
+        "outputId": "96b17fe0-3a77-44a5-ce79-ea02e8b9bc27",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "98619563-389c-4f99-d817-e7ae57c7743e"
+        }
       },
       "source": [
         "num_classes = len(train_dataset.classes)\n",
         "print(num_classes)"
       ],
-      "execution_count": 8,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,6 +152,70 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1sRHplNeLGCy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class ConvCapsLayer(nn.Module):\n",
+        "    def __init__(self, in_channel_types, out_channel_types, in_vector_length, out_vector_length, kernel_size, stride, num_iterations, new_height, new_width):\n",
+        "      # Call parent constructor\n",
+        "      super().__init__()\n",
+        "      \n",
+        "      self.in_channel_types = in_channel_types\n",
+        "      self.out_channel_types = out_channel_types\n",
+        "      self.in_vector_length = in_vector_length\n",
+        "      self.out_vector_length = out_vector_length\n",
+        "      self.kernel_size = kernel_size\n",
+        "      self.stride = stride\n",
+        "      self.num_iterations = num_iterations\n",
+        "      self.new_height = new_height\n",
+        "      self.new_width = new_width\n",
+        "      self.W = nn.Parameter(torch.randn(1, in_channel_types, 1, out_channel_types, out_vector_length, in_vector_length))\n",
+        "    \n",
+        "    def squash(self, in_tensor):\n",
+        "      squared_norm = (in_tensor ** 2).sum(-2, keepdim=True)\n",
+        "      out_tensor = squared_norm *  in_tensor / ((1. + squared_norm) * torch.sqrt(squared_norm))\n",
+        "      return out_tensor\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "      batch_size = x.size(0)\n",
+        "      y = torch.zeros(batch_size, self.in_vector_length, self.in_channel_types, self.new_height, self.new_width, dtype=torch.float).to(dev)\n",
+        "      kernel = torch.ones(1, 1, self.kernel_size, self.kernel_size, dtype=torch.float).to(dev)\n",
+        "      for i in range(self.in_vector_length):\n",
+        "        for j in range(self.in_channel_types):\n",
+        "          y[:,i,j,:,:] = F.conv2d(x[:,i,j,:,:].unsqueeze_(1), kernel, stride=self.stride).squeeze(1)\n",
+        "\n",
+        "      y = y.view(batch_size, self.in_channel_types, self.new_height * self.new_width, -1)\n",
+        "      y = torch.stack([y] * self.out_channel_types, dim=3).unsqueeze(5)\n",
+        "\n",
+        "      W = torch.cat([self.W] * batch_size, dim=0)\n",
+        "      c = W @ y\n",
+        "\n",
+        "      b_ij = torch.zeros(1, self.in_channel_types, c.size(2), self.out_channel_types, 1).to(dev)\n",
+        "\n",
+        "      for iteration in range(self.num_iterations):\n",
+        "        c_ij = F.softmax(b_ij, dim=-2)\n",
+        "        c_ij = torch.cat([c_ij] * batch_size, dim=0).unsqueeze(5)\n",
+        "\n",
+        "        s_j = (c_ij * c).sum(dim=1, keepdim=True)\n",
+        "        v_j = self.squash(s_j)\n",
+        "\n",
+        "        if iteration < self.num_iterations - 1:\n",
+        "          a_ij = torch.matmul(c.transpose(4, 5), torch.cat([v_j] * self.in_channel_types, dim=1))\n",
+        "          b_ij = b_ij + a_ij.squeeze(5).mean(dim=0, keepdim=True)\n",
+        "\n",
+        "      v_j = v_j.squeeze(1)\n",
+        "      v_j = v_j.transpose(3,1).squeeze(4)\n",
+        "      v_j = v_j.view(v_j.size(0), v_j.size(1), v_j.size(2), self.new_height, self.new_width)\n",
+        "      return v_j"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -168,14 +233,19 @@
         "    # Create convolutional layers\n",
         "    self.conv_layers = nn.Sequential(\n",
         "      # Layer 1\n",
-        "      nn.Conv2d(3, 16, kernel_size=2, padding=0, stride=2),\n",
+        "      nn.Conv2d(3, 16, kernel_size=5, padding=2, stride=2),\n",
         "      nn.ReLU()\n",
+        "    )\n",
+        "    self.conv_capsule_layers = nn.Sequential(\n",
+        "      # Layer 1\n",
+        "      ConvCapsLayer(in_channel_types = 1, out_channel_types = 2, in_vector_length = 16, out_vector_length = 16, kernel_size = 2, stride = 2, num_iterations = 2, new_height = 64, new_width = 64)\n",
         "    )\n",
         "  \n",
         "  # Forward\n",
         "  def forward(self, x):\n",
         "    x = self.conv_layers(x)\n",
         "    x = x.unsqueeze(2)\n",
+        "    x = self.conv_capsule_layers(x)\n",
         "    return x"
       ],
       "execution_count": 0,
@@ -186,11 +256,11 @@
       "metadata": {
         "id": "qtTivCTQ1Uuo",
         "colab_type": "code",
+        "outputId": "7b9468c4-71eb-48bb-96b2-3b048a945dcc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "81865527-c7ce-4808-9d5b-97b18f1473f6"
+        }
       },
       "source": [
         "batch,labels = next(iter(train_loader))\n",
@@ -201,12 +271,12 @@
         "out = model(batch)\n",
         "print(out.size())"
       ],
-      "execution_count": 14,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "torch.Size([8, 16, 1, 128, 128])\n"
+            "torch.Size([4, 16, 2, 64, 64])\n"
           ],
           "name": "stdout"
         }
