--- a/Capsule_Network_Project.ipynb
+++ b/Capsule_Network_Project.ipynb
@@ -44,7 +44,7 @@
         "from torchvision.datasets import ImageFolder\n",
         "from torch.utils.data import DataLoader"
       ],
-      "execution_count": 0,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -52,18 +52,18 @@
       "metadata": {
         "colab_type": "code",
         "id": "U7AN-xvK8RVc",
-        "outputId": "53dfa088-1f68-46cc-b0df-7ba7f70524b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+          "height": 50
+        },
+        "outputId": "d7b4157a-6828-498f-ed48-dcf4d1cd21d5"
       },
       "source": [
         "print(f\"CUDA is available? {torch.cuda.is_available()}\")\n",
         "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(dev)"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,17 +80,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "HddFaBBPs0k6",
-        "outputId": "6f91829b-7dbe-4a4a-c9a3-391bd4e331f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125
-        }
+          "height": 121
+        },
+        "outputId": "06ce6575-d2dd-4746-e124-e90759358be1"
       },
       "source": [
         "drive.mount(\"/content/drive\",True)\n",
         "root_dir = \"/content/drive/My Drive/SB3/\""
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "    T.ToTensor()\n",
         "])"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "    \"test\": test_loader\n",
         "}"
       ],
-      "execution_count": 0,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -146,17 +146,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "ZdhX4e8dtL-g",
-        "outputId": "bf850c3d-76eb-4b4f-c2b7-1d00b8607285",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "a1b30547-ef06-4930-8739-9dcbb9e208d9"
       },
       "source": [
         "num_classes = len(train_dataset.classes)\n",
         "print(num_classes)"
       ],
-      "execution_count": 0,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "      v_j = v_j.view(v_j.size(0), v_j.size(1), v_j.size(2), self.new_height, self.new_width)\n",
         "      return v_j"
       ],
-      "execution_count": 0,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -247,7 +247,7 @@
         "            nn.Conv2d(3, 16, kernel_size=5, padding=2, stride=2),\n",
         "            nn.ReLU()\n",
         "        )\n",
-        "        # Layer 1\n",
+        "        \n",
         "        self.conv_capsule_layers = nn.Sequential(\n",
         "            ConvCapsLayer(in_channel_types = 1, out_channel_types = 2, in_vector_length = 16, out_vector_length = 16, kernel_size = 5, padding = 2, stride = 2, num_iterations = 1, new_height = 64, new_width = 64),\n",
         "            ConvCapsLayer(in_channel_types = 2, out_channel_types = 4, in_vector_length = 16, out_vector_length = 16, kernel_size = 5, padding = 2, stride = 1, num_iterations = 3, new_height = 64, new_width = 64),\n",
@@ -257,13 +257,26 @@
         "            ConvCapsLayer(in_channel_types = 8, out_channel_types = 8, in_vector_length = 64, out_vector_length = 32, kernel_size = 5, padding = 2, stride = 1, num_iterations = 3, new_height = 16, new_width = 16),\n",
         "            ConvCapsLayer(in_channel_types = 8, out_channel_types = 1, in_vector_length = 32, out_vector_length = 16, kernel_size = 5, padding = 2, stride = 2, num_iterations = 3, new_height = 8, new_width = 8)\n",
         "        )\n",
+        "\n",
+        "    def capsule_average_pooling(self, x):\n",
+        "      height = x.size(3)\n",
+        "      width = x.size(4)\n",
+        "      x = x.sum(dim=4).sum(dim=3)\n",
+        "      x = x / (height * width)\n",
+        "      return x\n",
+        "    \n",
+        "    def score(self, x):\n",
+        "      return torch.sqrt((x ** 2).sum(dim=2))\n",
+        "    \n",
         "    def forward(self, x):\n",
         "      x = self.conv_layers(x)\n",
         "      x = x.unsqueeze(2)\n",
         "      x = self.conv_capsule_layers(x)\n",
-        "      return x"
+        "      x = x.transpose(1, 2)\n",
+        "      x = self.capsule_average_pooling(x)\n",
+        "      return self.score(x)"
       ],
-      "execution_count": 0,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -271,11 +284,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "qtTivCTQ1Uuo",
-        "outputId": "afc8ae31-a6ea-493d-d78f-b20d38033b1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "425c9e01-f1f7-44dc-f0f2-79d8bb727fae"
       },
       "source": [
         "batch,labels = next(iter(train_loader))\n",
@@ -286,12 +299,12 @@
         "out = model(batch)\n",
         "print(out.size())"
       ],
-      "execution_count": 0,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "torch.Size([4, 16, 1, 8, 8])\n"
+            "torch.Size([4, 1])\n"
           ],
           "name": "stdout"
         }
