--- a/Capsule_Network_Project.ipynb
+++ b/Capsule_Network_Project.ipynb
@@ -44,7 +44,7 @@
         "from torchvision.datasets import ImageFolder\n",
         "from torch.utils.data import DataLoader"
       ],
-      "execution_count": 30,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -56,14 +56,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "d7b4157a-6828-498f-ed48-dcf4d1cd21d5"
+        "outputId": "1495689b-ea3a-44d2-abcf-0782c3aa4319"
       },
       "source": [
         "print(f\"CUDA is available? {torch.cuda.is_available()}\")\n",
         "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(dev)"
       ],
-      "execution_count": 31,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,23 +82,19 @@
         "id": "HddFaBBPs0k6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 121
+          "height": 34
         },
-        "outputId": "06ce6575-d2dd-4746-e124-e90759358be1"
+        "outputId": "831d3c8a-a9d8-4610-df42-793cd4b562a2"
       },
       "source": [
         "drive.mount(\"/content/drive\",True)\n",
         "root_dir = \"/content/drive/My Drive/SB3/\""
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
             "Mounted at /content/drive\n"
           ],
           "name": "stdout"
@@ -118,7 +114,7 @@
         "    T.ToTensor()\n",
         "])"
       ],
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -138,7 +134,7 @@
         "    \"test\": test_loader\n",
         "}"
       ],
-      "execution_count": 38,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -150,13 +146,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a1b30547-ef06-4930-8739-9dcbb9e208d9"
+        "outputId": "fd8f1f10-dc18-49b3-cb52-cc3e914e52fe"
       },
       "source": [
         "num_classes = len(train_dataset.classes)\n",
         "print(num_classes)"
       ],
-      "execution_count": 39,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +173,6 @@
       "source": [
         "class ConvCapsLayer(nn.Module):\n",
         "    def __init__(self, in_channel_types, out_channel_types, in_vector_length, out_vector_length, kernel_size, padding, stride, num_iterations, new_height, new_width):\n",
-        "      # Call parent constructor\n",
         "      super().__init__()\n",
         "      \n",
         "      self.in_channel_types = in_channel_types\n",
@@ -229,7 +224,43 @@
         "      v_j = v_j.view(v_j.size(0), v_j.size(1), v_j.size(2), self.new_height, self.new_width)\n",
         "      return v_j"
       ],
-      "execution_count": 40,
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H438k6GcTxvd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Reconstruction(nn.Module):\n",
+        "    def __init__(self, num_classes):\n",
+        "      super().__init__()\n",
+        "      \n",
+        "      self.fc_layer = nn.Sequential(\n",
+        "        nn.Linear(num_classes*16, 80),\n",
+        "        nn.ReLU(inplace=True)\n",
+        "      )\n",
+        "\n",
+        "      self.reconstruction_layers = nn.Sequential(\n",
+        "          nn.ConvTranspose2d(1, 128, kernel_size=5, padding=2, stride=8, output_padding = (7,7)),\n",
+        "          nn.ReLU(inplace=True),\n",
+        "          nn.ConvTranspose2d(128, 64, kernel_size=5, padding=2, stride=8, output_padding = (7,7)),\n",
+        "          nn.ReLU(inplace=True),\n",
+        "          nn.Conv2d(64, 3, kernel_size=5, padding=2, stride=1),\n",
+        "          nn.ReLU(inplace=True)\n",
+        "    )\n",
+        "        \n",
+        "    def forward(self, x):\n",
+        "        x = self.fc_layer(x)\n",
+        "        print(x.size())\n",
+        "        x = x.view(x.size(0), 1, 8, 10)\n",
+        "        x = self.reconstruction_layers(x)\n",
+        "        return x"
+      ],
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -241,11 +272,11 @@
       },
       "source": [
         "class CapsNet(nn.Module):\n",
-        "    def __init__(self):\n",
+        "    def __init__(self, num_classes):\n",
         "        super().__init__()\n",
         "        self.conv_layers = nn.Sequential(\n",
         "            nn.Conv2d(3, 16, kernel_size=5, padding=2, stride=2),\n",
-        "            nn.ReLU()\n",
+        "            nn.ReLU(inplace=True)\n",
         "        )\n",
         "        \n",
         "        self.conv_capsule_layers = nn.Sequential(\n",
@@ -255,8 +286,10 @@
         "            ConvCapsLayer(in_channel_types = 4, out_channel_types = 8, in_vector_length = 32, out_vector_length = 32, kernel_size = 5, padding = 2, stride = 1, num_iterations = 3, new_height = 32, new_width = 32),\n",
         "            ConvCapsLayer(in_channel_types = 8, out_channel_types = 8, in_vector_length = 32, out_vector_length = 64, kernel_size = 5, padding = 2, stride = 2, num_iterations = 3, new_height = 16, new_width = 16),\n",
         "            ConvCapsLayer(in_channel_types = 8, out_channel_types = 8, in_vector_length = 64, out_vector_length = 32, kernel_size = 5, padding = 2, stride = 1, num_iterations = 3, new_height = 16, new_width = 16),\n",
-        "            ConvCapsLayer(in_channel_types = 8, out_channel_types = 1, in_vector_length = 32, out_vector_length = 16, kernel_size = 5, padding = 2, stride = 2, num_iterations = 3, new_height = 8, new_width = 8)\n",
+        "            ConvCapsLayer(in_channel_types = 8, out_channel_types = num_classes, in_vector_length = 32, out_vector_length = 16, kernel_size = 5, padding = 2, stride = 2, num_iterations = 3, new_height = 8, new_width = 8)\n",
         "        )\n",
+        "\n",
+        "        self.reconstruction_layer = Reconstruction(num_classes=2)\n",
         "\n",
         "    def capsule_average_pooling(self, x):\n",
         "      height = x.size(3)\n",
@@ -274,9 +307,12 @@
         "      x = self.conv_capsule_layers(x)\n",
         "      x = x.transpose(1, 2)\n",
         "      x = self.capsule_average_pooling(x)\n",
-        "      return self.score(x)"
+        "      scores = self.score(x)\n",
+        "      x = x.view(x.size(0), x.size(1) * x.size(2))\n",
+        "      reconstructions = self.reconstruction_layer(x)\n",
+        "      return scores, reconstructions"
       ],
-      "execution_count": 42,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -286,25 +322,26 @@
         "id": "qtTivCTQ1Uuo",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 50
         },
-        "outputId": "425c9e01-f1f7-44dc-f0f2-79d8bb727fae"
+        "outputId": "d4ab7954-3dd5-46b3-c61f-2c095be3dff8"
       },
       "source": [
         "batch,labels = next(iter(train_loader))\n",
         "batch = batch.to(dev)\n",
         "labels = labels.to(dev)\n",
-        "model = CapsNet()\n",
+        "model = CapsNet(num_classes=2)\n",
         "model = model.to(dev)\n",
-        "out = model(batch)\n",
-        "print(out.size())"
+        "scores, reconstructions = model(batch)\n",
+        "print(reconstructions.size())"
       ],
-      "execution_count": 43,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "torch.Size([4, 1])\n"
+            "torch.Size([4, 80])\n",
+            "torch.Size([4, 3, 512, 640])\n"
           ],
           "name": "stdout"
         }
