Added validation and training

--- a/Capsule_Network_Project.ipynb
+++ b/Capsule_Network_Project.ipynb
@@ -44,7 +44,7 @@
         "from torchvision.datasets import ImageFolder\n",
         "from torch.utils.data import DataLoader"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(dev)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
         "drive.mount(\"/content/drive\",True)\n",
         "root_dir = \"/content/drive/My Drive/SB3/\""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "    T.ToTensor()\n",
         "])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -127,14 +127,26 @@
       "source": [
         "train_dataset = ImageFolder(os.path.join(root_dir, \"train\"), transform=train_transform)\n",
         "test_dataset = ImageFolder(os.path.join(root_dir, \"test\"), transform=train_transform)\n",
+        "num_train = len(train_dataset)\n",
+        "train_idx = list(range(num_train))\n",
+        "random.shuffle(train_idx)\n",
+        "val_frac = 0.2\n",
+        "num_val = int(num_train*val_frac)\n",
+        "num_train = num_train - num_val\n",
+        "val_idx = train_idx[num_train:]\n",
+        "train_idx = train_idx[:num_train]\n",
+        "val_dataset = Subset(train_dataset,val_idx)\n",
+        "train_dataset = Subset(train_dataset, train_idx)\n",
         "train_loader = DataLoader(train_dataset, batch_size = 4, num_workers=4, shuffle=True)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=4, num_workers=4, shuffle=False)\n",
         "test_loader   = DataLoader(test_dataset,   batch_size = 4, num_workers=4, shuffle=False)\n",
         "loaders = {\n",
         "    \"train\": train_loader,\n",
+        "    \"val\" : val_loader,\n",
         "    \"test\": test_loader\n",
         "}"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +164,7 @@
         "num_classes = len(train_dataset.classes)\n",
         "print(num_classes)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +236,7 @@
         "      v_j = v_j.view(v_j.size(0), v_j.size(1), v_j.size(2), self.new_height, self.new_width)\n",
         "      return v_j"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +272,7 @@
         "        x = self.reconstruction_layers(x)\n",
         "        return x"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +324,7 @@
         "      reconstructions = self.reconstruction_layer(x)\n",
         "      return scores, reconstructions"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +347,7 @@
         "scores, reconstructions = model(batch)\n",
         "print(reconstructions.size())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,6 +358,67 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QyMuXrGCEtHp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def train(epochs, dev, lr=0.001):\n",
+        "  try:\n",
+        "    model = CapsNet()\n",
+        "    model = model.to(dev)\n",
+        "    optimizer = optim.SGD(model.parameters(), lr = lr)\n",
+        "    history_loss = {\"train\": [], \"val\": [], \"test\": []}\n",
+        "    history_accuracy = {\"train\": [], \"val\": [], \"test\": []}\n",
+        "    for epoch in range(epochs):\n",
+        "      sum_loss = {\"train\": 0, \"val\": 0, \"test\": 0}\n",
+        "      sum_accuracy= {\"train\": 0, \"val\": 0, \"test\": 0}\n",
+        "      for split in [\"train\",\"val\",\"test\"]:\n",
+        "        for (input,labels) in loaders[split]:\n",
+        "          input = input.to(dev)\n",
+        "          labels = labels.to(dev)\n",
+        "          optimizer.zero_grad()\n",
+        "          pred = model(input)\n",
+        "          loss = F.cross_entropy(pred,labels)\n",
+        "          sum_loss[split] += loss.item()\n",
+        "          if split == \"train\":\n",
+        "            loss.backward()\n",
+        "            optimizer.step()\n",
+        "          _,pred_labels = pred_max(1)\n",
+        "          batch_accuracy = (pred_labels == labels).sum().item()/input.size(0)\n",
+        "          sum_accuracy[split] += batch_accuracy\n",
+        "      epoch_loss = {split: sum_loss[split]/len(loaders[split]) for split in [\"train\",\"val\",\"test\"]}\n",
+        "      epoch_accuracy = {split: sum_accuracy[split]/len(loaders[split]) for split in [\"train\",\"val\",\"test\"]}\n",
+        "      for split in [\"train\",\"val\",\"test\"]:\n",
+        "        history_loss[split].append(epoch_loss[split])\n",
+        "        history_accuracy[split].append(epoch_accuracy[split])\n",
+        "      print(f\"Epoch {epoch+1}:\",\n",
+        "            f\"TrL={epoch_loss['train']:.4f},\",\n",
+        "            f\"TrA={epoch_accuracy['train']:.4f},\"\n",
+        "            f\"VL={epoch_loss['val']:.4f},\"\n",
+        "            f\"VA={epoch_accuracy['val']:.4f},\"\n",
+        "            f\"TeL={epoch_loss['test']:.4f},\"\n",
+        "            f\"TeA={epoch_accuracy['test']:.4f},\")\n",
+        "  except KeyboardInterrupt:\n",
+        "    print(\"Interrupted\")\n",
+        "  finally:\n",
+        "    plt.title(\"Loss\")\n",
+        "    for split in [\"train\",\"val\",\"test\"]:\n",
+        "      plt.plot(history_loss[split],label = split)\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "    plt.title(\"Accuracy\")\n",
+        "    for split in [\"train\",\"val\",\"test\"]:\n",
+        "      plt.plot(history_accuracy[split], label = split)\n",
+        "    plt.legend()\n",
+        "    plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
