--- a/Capsule_Network_Project.ipynb
+++ b/Capsule_Network_Project.ipynb
@@ -362,6 +362,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "pIjFpX3vMYVS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Create optimizer\n",
+        "import torch.optim as optim\n",
+        "optimizer = optim.Adam(model.parameters(), lr=0.001)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "QyMuXrGCEtHp",
         "colab_type": "code",
         "colab": {}
@@ -369,15 +384,18 @@
       "source": [
         "def train(epochs, dev, lr=0.001):\n",
         "  try:\n",
-        "    model = CapsNet()\n",
+        "    model = CapsNet(num_classes=2)\n",
         "    model = model.to(dev)\n",
-        "    optimizer = optim.SGD(model.parameters(), lr = lr)\n",
         "    history_loss = {\"train\": [], \"val\": [], \"test\": []}\n",
         "    history_accuracy = {\"train\": [], \"val\": [], \"test\": []}\n",
         "    for epoch in range(epochs):\n",
         "      sum_loss = {\"train\": 0, \"val\": 0, \"test\": 0}\n",
         "      sum_accuracy= {\"train\": 0, \"val\": 0, \"test\": 0}\n",
         "      for split in [\"train\",\"val\",\"test\"]:\n",
+        "        if split == \"train\":\n",
+        "          model.train()\n",
+        "        else:\n",
+        "          model.eval()\n",
         "        for (input,labels) in loaders[split]:\n",
         "          input = input.to(dev)\n",
         "          labels = labels.to(dev)\n",
@@ -388,7 +406,7 @@
         "          if split == \"train\":\n",
         "            loss.backward()\n",
         "            optimizer.step()\n",
-        "          _,pred_labels = pred_max(1)\n",
+        "          _,pred_labels = pred.max(1)\n",
         "          batch_accuracy = (pred_labels == labels).sum().item()/input.size(0)\n",
         "          sum_accuracy[split] += batch_accuracy\n",
         "      epoch_loss = {split: sum_loss[split]/len(loaders[split]) for split in [\"train\",\"val\",\"test\"]}\n",
