--- a/Capsule_Network_Project.ipynb
+++ b/Capsule_Network_Project.ipynb
@@ -38,7 +38,7 @@
         "import numpy as np\n",
         "import itertools as it"
       ],
-      "execution_count": 69,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -50,14 +50,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "e0e012b1-dd07-4e6a-9210-6b32af050688"
+        "outputId": "b93dae2c-131c-4306-aaa6-66fde718e2ac"
       },
       "source": [
         "print(f\"CUDA is available? {torch.cuda.is_available()}\")\n",
         "dev = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(dev)"
       ],
-      "execution_count": 70,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,13 +78,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "4ad69fe3-339d-4459-fe93-5a1be2825569"
+        "outputId": "79776ce3-0a22-4a77-a4ff-fe486b497fa4"
       },
       "source": [
         "drive.mount(\"/content/drive\",True)\n",
         "root_dir = \"/content/drive/My Drive/SB3/\""
       ],
-      "execution_count": 71,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "    T.ToTensor()\n",
         "])"
       ],
-      "execution_count": 72,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -125,7 +125,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "04b25662-b0a8-49d9-9a9d-2885abb3c2ae"
+        "outputId": "660df16b-cfc8-46f1-b156-c3461c1fc7b6"
       },
       "source": [
         "train_dataset = ImageFolder(os.path.join(root_dir, \"train\"), transform=train_transform)\n",
@@ -133,7 +133,7 @@
         "num_classes = len(train_dataset.classes)\n",
         "print(num_classes)"
       ],
-      "execution_count": 73,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,13 +153,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "605439d3-ba0b-432a-b88a-e1aab362a9bc"
+        "outputId": "32ae32f7-cf19-4135-f927-f0c42b0ef00a"
       },
       "source": [
         "print(len(train_dataset))\n",
         "print(len(test_dataset))"
       ],
-      "execution_count": 74,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,14 +180,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "b1f4a526-73b6-4fce-963f-27dd236a2d5e"
+        "outputId": "eba537ba-3112-49b2-9115-74f407bb3103"
       },
       "source": [
         "x = train_dataset[0][0]\n",
         "print(x.max())\n",
         "print(x.min())"
       ],
-      "execution_count": 75,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,13 +208,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e08bec3a-cf5c-46f9-8521-db3c85f3f1f8"
+        "outputId": "98b63181-b762-4250-92d7-c7662cf934e6"
       },
       "source": [
         "class_counts = [train_dataset.targets.count(i) for i in range(num_classes)]\n",
         "print(class_counts)"
       ],
-      "execution_count": 76,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +235,7 @@
       "source": [
         "num_train = len(train_dataset)\n",
         "idx = list(range(num_train))\n",
-        "val_frac = 0.3\n",
+        "val_frac = 0.2\n",
         "idx_iter = iter(idx)\n",
         "class_idx = [list(it.islice(idx_iter, x)) for x in class_counts]\n",
         "class_idx = [random.sample(x,len(x)) for x in class_idx]\n",
@@ -246,7 +246,7 @@
         "val_dataset = Subset(train_dataset,val_idx)\n",
         "train_dataset = Subset(train_dataset, train_idx)"
       ],
-      "execution_count": 77,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -258,19 +258,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "de43857a-e8cb-4572-a043-d59d6e4cb3df"
+        "outputId": "b59fe1a0-a5b2-4fca-a0c6-12d277c455c4"
       },
       "source": [
         "print(len(train_dataset))\n",
         "print(len(val_dataset))"
       ],
-      "execution_count": 78,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "780\n",
-            "329\n"
+            "891\n",
+            "218\n"
           ],
           "name": "stdout"
         }
@@ -285,7 +285,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "f2c97419-f2db-4ea5-f1cc-ed3ad5716ec4"
+        "outputId": "74a0cd37-5f63-4ff8-9d26-320981807ab1"
       },
       "source": [
         "train_counts = [x-int(x*val_frac) for x in class_counts]\n",
@@ -294,12 +294,12 @@
         "weights = weights.to(dev)\n",
         "print(weights)"
       ],
-      "execution_count": 79,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "tensor([ 1.0000, 17.5000, 12.9630,  4.2683, 29.1667, 25.0000,  1.4706,  9.4595],\n",
+            "tensor([ 1.0000, 17.3913, 12.9032,  4.3011, 28.5714, 25.0000,  1.4706,  9.5238],\n",
             "       device='cuda:0')\n"
           ],
           "name": "stdout"
@@ -315,17 +315,17 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3b84c851-b570-422a-f824-9f42109aef3d"
+        "outputId": "b25a8efb-dab8-4f3f-8dfc-b1817190908e"
       },
       "source": [
         "print(max_count)"
       ],
-      "execution_count": 80,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "350\n"
+            "400\n"
           ],
           "name": "stdout"
         }
@@ -348,7 +348,7 @@
         "    \"test\": test_loader\n",
         "}"
       ],
-      "execution_count": 81,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -374,7 +374,7 @@
         "\tsquared_norm = torch.sum(s**2, dim=dim, keepdim=True)\n",
         "\treturn squared_norm / (1 + squared_norm) * s / (torch.sqrt(squared_norm) + 1e-8)"
       ],
-      "execution_count": 82,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
         "    x = x.view(x.size(0), -1, self.vector_length)\n",
         "    return squash(x)\n"
       ],
-      "execution_count": 83,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
         "\n",
         "    return v"
       ],
-      "execution_count": 84,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -504,10 +504,12 @@
         "      self.reconstruction_layers = nn.Sequential(\n",
         "          nn.ConvTranspose2d(1, 128, kernel_size=5, padding=2, stride=11),\n",
         "          nn.ReLU(),\n",
+        "          nn.BatchNorm2d(128),\n",
         "          nn.ConvTranspose2d(128, 64, kernel_size=5, padding=2, stride=4, output_padding=(1,1)),\n",
         "          nn.ReLU(),\n",
+        "          nn.BatchNorm2d(64),\n",
         "          nn.Conv2d(64, 3, kernel_size=5, padding=7, stride=1),\n",
-        "          nn.ReLU()\n",
+        "          nn.Sigmoid()\n",
         "    )\n",
         "        \n",
         "    def forward(self, x):\n",
@@ -516,7 +518,7 @@
         "      x = self.reconstruction_layers(x)\n",
         "      return x"
       ],
-      "execution_count": 85,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -531,8 +533,10 @@
         "    def __init__(self, num_classes):\n",
         "      super().__init__()\n",
         "      self.conv_layer = nn.Sequential(\n",
-        "          nn.Conv2d(3, 64, kernel_size=5, padding=2, stride=8),\n",
-        "          nn.ReLU()\n",
+        "          nn.Conv2d(3, 64, kernel_size=5, padding=2, stride=4),\n",
+        "          nn.ReLU(),\n",
+        "          nn.BatchNorm2d(64),\n",
+        "          nn.MaxPool2d(kernel_size=5, padding=2, stride=2)\n",
         "      )\n",
         "      self.primary_caps = PrimaryCapsules(in_channels=64, out_channels=128, vector_length=8, kernel_size=5, padding=2, stride=1)\n",
         "      self.digit_caps = nn.Sequential(\n",
@@ -562,7 +566,7 @@
         "      reconstructions = self.reconstruction_layer(x)\n",
         "      return scores, reconstructions"
       ],
-      "execution_count": 86,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -576,7 +580,7 @@
         "model = CapsNet(num_classes=num_classes)\n",
         "model = model.to(dev)"
       ],
-      "execution_count": 87,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -588,7 +592,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "72530439-ff1e-4c38-b8e0-28b0d2c0844a"
+        "outputId": "8d3cd91f-add8-4aea-ae4c-2c75db50c296"
       },
       "source": [
         "batch,labels = next(iter(train_loader))\n",
@@ -598,7 +602,7 @@
         "print(scores.size())\n",
         "print(reconstructions.size())"
       ],
-      "execution_count": 88,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,7 +701,7 @@
         "        plt.legend()\n",
         "        plt.show()"
       ],
-      "execution_count": 89,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -707,41 +711,56 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 403
+          "height": 655
         },
-        "outputId": "9edd6d25-731f-4b05-bca7-71978e636845"
+        "outputId": "c56b6c5e-da68-41b5-f794-6e4a35a1f890"
       },
       "source": [
-        "train(100, dev, lr=0.0001)"
+        "train(100, dev, lr=0.001)"
       ],
       "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1: TrL=2.1096, TrA=0.3154, VL=1.9799, VA=0.4337, TeL=1.9740, TeA=0.4301,\n",
-            "Epoch 2: TrL=2.0044, TrA=0.4372, VL=1.9223, VA=0.4518, TeL=1.9202, TeA=0.4534,\n",
-            "Epoch 3: TrL=1.9882, TrA=0.4436, VL=1.8991, VA=0.4639, TeL=1.9000, TeA=0.4407,\n",
-            "Epoch 4: TrL=1.9831, TrA=0.4410, VL=1.8808, VA=0.4518, TeL=1.8798, TeA=0.4534,\n",
-            "Epoch 5: TrL=1.9685, TrA=0.4474, VL=1.8437, VA=0.4518, TeL=1.8441, TeA=0.4534,\n",
-            "Epoch 6: TrL=1.9492, TrA=0.4474, VL=1.8853, VA=0.4518, TeL=1.8745, TeA=0.4534,\n",
-            "Epoch 7: TrL=1.9186, TrA=0.4487, VL=1.8116, VA=0.4518, TeL=1.8062, TeA=0.4534,\n",
-            "Epoch 8: TrL=1.8869, TrA=0.4487, VL=1.8086, VA=0.4518, TeL=1.7944, TeA=0.4534,\n",
-            "Epoch 9: TrL=1.8859, TrA=0.4423, VL=1.8275, VA=0.4518, TeL=1.8228, TeA=0.4534,\n",
-            "Epoch 10: TrL=1.8696, TrA=0.4500, VL=1.7825, VA=0.4548, TeL=1.7735, TeA=0.4831,\n",
-            "Epoch 11: TrL=1.8409, TrA=0.4295, VL=1.8144, VA=0.4066, TeL=1.8042, TeA=0.4682,\n",
-            "Epoch 12: TrL=1.8206, TrA=0.4474, VL=1.7732, VA=0.4066, TeL=1.7748, TeA=0.4343,\n",
-            "Epoch 13: TrL=1.7993, TrA=0.4321, VL=1.7958, VA=0.4458, TeL=1.7910, TeA=0.4725,\n",
-            "Epoch 14: TrL=1.7709, TrA=0.4462, VL=1.7335, VA=0.4669, TeL=1.7232, TeA=0.4703,\n",
-            "Epoch 15: TrL=1.7481, TrA=0.4615, VL=1.7333, VA=0.4548, TeL=1.7263, TeA=0.4703,\n",
-            "Epoch 16: TrL=1.7381, TrA=0.4654, VL=1.7540, VA=0.4669, TeL=1.7498, TeA=0.4640,\n",
-            "Epoch 17: TrL=1.7225, TrA=0.4782, VL=1.7093, VA=0.4699, TeL=1.6996, TeA=0.4746,\n",
-            "Epoch 18: TrL=1.7161, TrA=0.4910, VL=1.7189, VA=0.4669, TeL=1.7125, TeA=0.4661,\n",
-            "Epoch 19: TrL=1.6909, TrA=0.4782, VL=1.7119, VA=0.4759, TeL=1.7051, TeA=0.4979,\n",
-            "Epoch 20: TrL=1.6726, TrA=0.4872, VL=1.6879, VA=0.4699, TeL=1.6810, TeA=0.4852,\n",
-            "Epoch 21: TrL=1.6600, TrA=0.4782, VL=1.6857, VA=0.4699, TeL=1.6754, TeA=0.4746,\n",
-            "Epoch 22: TrL=1.6520, TrA=0.4923, VL=1.6726, VA=0.4819, TeL=1.6628, TeA=0.5000,\n",
-            "Epoch 23: TrL=1.6466, TrA=0.4897, VL=1.6734, VA=0.4669, TeL=1.6654, TeA=0.5042,\n"
+            "Epoch 1: TrL=2.0380, TrA=0.3288, VL=1.8934, VA=0.3455, TeL=1.9014, TeA=0.3432,\n",
+            "Epoch 2: TrL=1.9438, TrA=0.3677, VL=1.8198, VA=0.4409, TeL=1.8103, TeA=0.4703,\n",
+            "Epoch 3: TrL=1.9001, TrA=0.4178, VL=1.7834, VA=0.4409, TeL=1.7863, TeA=0.4703,\n",
+            "Epoch 4: TrL=1.8711, TrA=0.4641, VL=1.8145, VA=0.3318, TeL=1.8085, TeA=0.3708,\n",
+            "Epoch 5: TrL=1.8585, TrA=0.4600, VL=1.7752, VA=0.4636, TeL=1.7682, TeA=0.5085,\n",
+            "Epoch 6: TrL=1.8204, TrA=0.4458, VL=1.7075, VA=0.4591, TeL=1.7134, TeA=0.5000,\n",
+            "Epoch 7: TrL=1.8236, TrA=0.4735, VL=1.7680, VA=0.4955, TeL=1.7681, TeA=0.5106,\n",
+            "Epoch 8: TrL=1.7842, TrA=0.4540, VL=1.7028, VA=0.4500, TeL=1.7053, TeA=0.5042,\n",
+            "Epoch 9: TrL=1.7483, TrA=0.5000, VL=1.6766, VA=0.4727, TeL=1.6772, TeA=0.5106,\n",
+            "Epoch 10: TrL=1.7273, TrA=0.4854, VL=1.6922, VA=0.4682, TeL=1.6818, TeA=0.5169,\n",
+            "Epoch 11: TrL=1.6946, TrA=0.4888, VL=1.6764, VA=0.4909, TeL=1.6707, TeA=0.5169,\n",
+            "Epoch 12: TrL=1.7138, TrA=0.4410, VL=1.7028, VA=0.3591, TeL=1.6956, TeA=0.4131,\n",
+            "Epoch 13: TrL=1.7463, TrA=0.3670, VL=1.6965, VA=0.3818, TeL=1.6961, TeA=0.4322,\n",
+            "Epoch 14: TrL=1.7162, TrA=0.4559, VL=1.6743, VA=0.4864, TeL=1.6793, TeA=0.5021,\n",
+            "Epoch 15: TrL=1.6712, TrA=0.4851, VL=1.6612, VA=0.4955, TeL=1.6605, TeA=0.5127,\n",
+            "Epoch 16: TrL=1.6587, TrA=0.4918, VL=1.6577, VA=0.4955, TeL=1.6555, TeA=0.5148,\n",
+            "Epoch 17: TrL=1.6271, TrA=0.4903, VL=1.6650, VA=0.4955, TeL=1.6507, TeA=0.5148,\n",
+            "Epoch 18: TrL=1.6057, TrA=0.4899, VL=1.6635, VA=0.4955, TeL=1.6460, TeA=0.5127,\n",
+            "Epoch 19: TrL=1.6231, TrA=0.4907, VL=1.6362, VA=0.4955, TeL=1.6457, TeA=0.5148,\n",
+            "Epoch 20: TrL=1.5874, TrA=0.4914, VL=1.6385, VA=0.4955, TeL=1.6415, TeA=0.5169,\n",
+            "Epoch 21: TrL=1.5717, TrA=0.4892, VL=1.6352, VA=0.4955, TeL=1.6170, TeA=0.5148,\n",
+            "Epoch 22: TrL=1.5827, TrA=0.4929, VL=1.6431, VA=0.4955, TeL=1.6375, TeA=0.5169,\n",
+            "Epoch 23: TrL=1.5547, TrA=0.4813, VL=1.6205, VA=0.4955, TeL=1.6154, TeA=0.5127,\n",
+            "Epoch 24: TrL=1.5415, TrA=0.4929, VL=1.5967, VA=0.5000, TeL=1.5949, TeA=0.5127,\n",
+            "Epoch 25: TrL=1.5286, TrA=0.4892, VL=1.5963, VA=0.4909, TeL=1.5859, TeA=0.5085,\n",
+            "Epoch 26: TrL=1.5236, TrA=0.4944, VL=1.5912, VA=0.5045, TeL=1.6009, TeA=0.5064,\n",
+            "Epoch 27: TrL=1.5368, TrA=0.5407, VL=1.6017, VA=0.5318, TeL=1.6054, TeA=0.5530,\n",
+            "Epoch 28: TrL=1.5349, TrA=0.6091, VL=1.5911, VA=0.5318, TeL=1.6046, TeA=0.5339,\n",
+            "Epoch 29: TrL=1.5359, TrA=0.6420, VL=1.6089, VA=0.5136, TeL=1.6156, TeA=0.5487,\n",
+            "Epoch 30: TrL=1.5097, TrA=0.6868, VL=1.6073, VA=0.5318, TeL=1.6036, TeA=0.5869,\n",
+            "Epoch 31: TrL=1.4908, TrA=0.7261, VL=1.7205, VA=0.5000, TeL=1.7082, TeA=0.5847,\n",
+            "Epoch 32: TrL=1.4909, TrA=0.7123, VL=1.6085, VA=0.6091, TeL=1.6320, TeA=0.6059,\n",
+            "Epoch 33: TrL=1.4754, TrA=0.7668, VL=1.6103, VA=0.5955, TeL=1.6034, TeA=0.5975,\n",
+            "Epoch 34: TrL=1.4575, TrA=0.7586, VL=1.6004, VA=0.5455, TeL=1.5953, TeA=0.5911,\n",
+            "Epoch 35: TrL=1.4591, TrA=0.7664, VL=1.6046, VA=0.5864, TeL=1.5962, TeA=0.6419,\n",
+            "Epoch 36: TrL=1.4521, TrA=0.7698, VL=1.6444, VA=0.5909, TeL=1.6341, TeA=0.6208,\n",
+            "Epoch 37: TrL=1.4253, TrA=0.7971, VL=1.6103, VA=0.5727, TeL=1.5946, TeA=0.6081,\n",
+            "Epoch 38: TrL=1.4131, TrA=0.8363, VL=1.5715, VA=0.5955, TeL=1.5713, TeA=0.6419,\n"
           ],
           "name": "stdout"
         }
